# audio-file-metadata

./: .gitignore  Makefile  README.md  pyproject.toml
app/: main.py
app/enums/: __init__.py  audio.py
app/routers/: __init__.py  metadata.py
app/templates/: index.html
tests/: conftest.py  test_metadata.py  test_root.py
