[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "AudioFile_Validator"
version = "0.1.0"
description = "A simple validator for *.mp3 and *.wav files"
requires-python = ">=3.8"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name="Kanashii" }
]
dependencies = [
    "pydub>=0.25.1",
    "mutagen>=1.47.0",
    "fastapi>=0.114.2",
    "jinja2>=3.1.4",
    "uvicorn>=0.30.6"
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "ruff>=0.3.7"
]
tests = [
    "pytest>=8.3.3",
    "httpx>=0.27.2",
    "python-multipart>=0.0.9",
]

[project.urls]
Homepage = "https://github.com/Th3Kanashii/audio-file-metadata.git"
Documentation = "https://github.com/Th3Kanashii/audio-file-metadata#readme"
"Source code" = "https://github.com/Th3Kanashii/audio-file-metadata.git"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
cache-dir = ".cache/ruff"
line-length = 99
output-format = "full"
preview = true
show-fixes = true
exclude = [
    ".git",
    ".venv",
    ".idea",
    "tests",
    ".cache",
    "build",
    "dist",
    "scripts",
    "migrations"
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "ALL"
]
extend-select = [
    "ANN204" # missing-return-type-special-method
]
ignore = [
    "D", # pydocstyle
    "CPY", # flake8-copyright
    "FA", # flake8-future-annotations
    "ANN", # flake8-annotations
    "EM", # flake8-errmsg
    "ICN", # flake8-import-conventions
    "TRY003", # raise-vanilla-args
    "PLR6301", # no-self-use
    "PLR0904", # too-many-public-methods
    "PLR0911", # too-many-return-statements
    "PLR0912", # too-many-branches
    "PLR0913", # too-many-arguments
    "PLR0914", # too-many-locals
    "PLR0915", # too-many-statements
    "PLR0916", # too-many-boolean-expressions
    "PLR0917", # too-many-positional
    "PLR1702", # too-many-nested-blocks
    "DOC201"
]

[tool.ruff.lint.isort]
lines-after-imports = 2
force-wrap-aliases = true
combine-as-imports = true

[tool.ruff.lint.pylint]
allow-magic-value-types = []

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.pytest.ini_options]
cache_dir = ".cache/pytest"

[tool.mypy]
python_version = "3.8"
cache_dir = ".cache/mypy"
strict = true
show_error_context = true
show_column_numbers = true
pretty = true
plugins = [
    "pydantic.mypy",
    "sqlalchemy.ext.mypy.plugin"
]
exclude = [
    ".git",
    ".venv",
    ".idea",
    ".tests",
    ".cache",
    "build",
    "dist",
    "scripts",
    "migrations"
]
